--- a/index.html
+++ b/index.html
@@ -173,12 +173,14 @@ document.write(months[month]+" "+today+", "+year)
             }, 1000);
           }</script>
       <p></p>
-	  <a href=https://t.co/qdyWGCrVQX">
+	  <a href="https://t.co/qdyWGCrVQX">
         <button style="display: inline-block; background-color: #8BC34A;font-size: 18px; padding: 18px 44px;width:100%;" >Claim Your ROLLS Now</button>
-	  </a>
+		  </a>
         <div class="timer" style="margin-top:5px;margin-left:5px">
+		
                    <p>Your prize will expire in <span style="color:red;font-weight: 600;"><span id="mins">5</span>:<span id="hsecs">29</span></span></p>
                 </div>
+		   
         <div class="la-ball-fall"></div>
     </div>  
 </div>
