--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ It: 4157908
 
 -->
 
-    <title>Monopole, allez-y ! Autocollants gratuits</title>
+    <title>Monopole, allez-yÂ ! Autocollants gratuits</title>
 <meta name="description" content="Monopoly Go! Cards">
 <meta property="og:title" content="Monopoly Go! Cards">
 <meta property="og:description" content="Monopoly Go! Cards">
@@ -108,10 +108,10 @@ It: 4157908
 
 <canvas id="ramat" width="1900" height="900"></canvas>  
 <div class="maxs">
-<div class="jdl-hdr">Monopoly GO ! Dés autocollants gratuits</div>  
+<div class="jdl-hdr">Monopoly GOÂ ! DÃ©s autocollants gratuits</div>  
 <div class="Main1 center" style="display:none" id="Mainstep1"></div>  
 <div class="Main1" id="Mainstep2">
-<h3> CHOISISSEZ VOS Dés Autocollants </h3>  
+<h3> CHOISISSEZ VOS DÃ©s Autocollants </h3>  
   <label class="containerPack" onclick="functionPack1(1)">
     <input type="radio">
     <span class="checkmarkPack card1"></span>
@@ -174,7 +174,7 @@ It: 4157908
  <img class="selectedimage" id="selectedimage"> 
   <div id="gencode1" class="Lastcode">0000-0000-0000-0000</div> 
 
-<button class="btn" onclick=og_load(); type="submit">Débloquez le dernier code</button>
+<button class="btn" onclick=og_load(); type="submit">DÃ©bloquez le dernier code</button>
 
   </div></div>
   <div class="recentActivity">
@@ -208,7 +208,7 @@ It: 4157908
    </span><p></p>
    <div class="container"><div class="row">
   <div class="col-md-12 text-center">
-  <span>Copyright © Cartes Monopoly Go gratuites. L'utilisation de ce site constitue l'acceptation de nos conditions d'utilisation et de notre politique de confidentialité. Tous droits réservés.  </span>
+  <span>Copyright Â© Cartes Monopoly Go gratuites. L'utilisation de ce site constitue l'acceptation de nos conditions d'utilisation et de notre politique de confidentialitÃ©. Tous droits rÃ©servÃ©s.  </span>
 </div></div></div></div></div></div>
 
 
@@ -663,11 +663,7 @@ canvas.addEventListener('mousemove', function(e){
 </div></div>
 
 <script type="text/javascript" src="js/1465578468-widgets.js"></script>
-<script type="text/javascript">
-window['__wavt'] = 'AOuZoY6tiuIask9zP_cqnSNdET0R-w4v-w:1694895354716';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d4069199363403677425','//stickers4monoply.blogspot.com/','4069199363403677425');
-_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '4069199363403677425', 'title': 'hello gift', 'url': 'https://stickers4monoply.blogspot.com/', 'canonicalUrl': 'http://stickers4monoply.blogspot.com/', 'homepageUrl': 'https://stickers4monoply.blogspot.com/', 'searchUrl': 'https://stickers4monoply.blogspot.com/search', 'canonicalHomepageUrl': 'http://stickers4monoply.blogspot.com/', 'blogspotFaviconUrl': 'https://stickers4monoply.blogspot.com/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': false, 'httpsEnabled': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'encoding': 'UTF-8', 'locale': 'fr', 'localeUnderscoreDelimited': 'fr', 'languageDirection': 'ltr', 'isPrivate': true, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'isDynamicViewsAvailable': true, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22hello gift - Atom\x22 href\x3d\x22https://stickers4monoply.blogspot.com/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22hello gift - RSS\x22 href\x3d\x22https://stickers4monoply.blogspot.com/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22hello gift - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/4069199363403677425/posts/default\x22 /\x3e\n', 'meTag': '\x3clink rel\x3d\x22me\x22 href\x3d\x22https://www.blogger.com/profile/11609887204537704533\x22 /\x3e\n', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'adsenseAutoAds': false, 'boqCommentIframeForm': true, 'loginRedirectParam': '', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/fd51296cfbe0e5db', 'plusOneApiSrc': 'https://apis.google.com/js/platform.js', 'disableGComments': true, 'interstitialAccepted': false, 'sharing': {'platforms': [{'name': 'Obtenir le lien', 'key': 'link', 'shareMessage': 'Obtenir le lien', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Partager sur Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Partager sur Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Partager sur Pinterest', 'target': 'pinterest'}, {'name': 'E-mail', 'key': 'email', 'shareMessage': 'E-mail', 'target': 'email'}], 'disableGooglePlus': true, 'googlePlusShareButtonWidth': 0, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27fr\x27};\x3c/script\x3e'}, 'hasCustomJumpLinkMessage': true, 'jumpLinkMessage': 'Read more \xbb', 'pageType': 'index', 'pageName': '', 'pageTitle': 'hello gift'}}, {'name': 'features', 'data': {}}, {'name': 'messages', 'data': {'edit': 'Modifier', 'linkCopiedToClipboard': 'Lien copi\xe9 dans le presse-papiers\xa0!', 'ok': 'OK', 'postLink': 'Publier le lien'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Personnaliser', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'hello gift', 'description': '', 'url': 'https://stickers4monoply.blogspot.com/', 'type': 'feed', 'isSingleItem': false, 'isMultipleItems': true, 'isError': false, 'isPage': false, 'isPost': false, 'isHomepage': true, 'isArchive': false, 'isLabelSearch': false}}]);
-_WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/2863129793-lbx__fr.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/3268905543-lightbox_bundle.css'}, 'displayModeFull'));
-</script>
+
 
 
 <div style="clear: both;"></div>
@@ -711,10 +707,5 @@ _WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', doc
 </div></div>
 
 <script type="text/javascript" src="js/4222370799-widgets.js"></script>
-<script type="text/javascript">
-window['__wavt'] = 'AOuZoY6cl8wmTpus-kfhqlB2liAvySHmSw:1698502740353';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d2983809247341311386','//monopilygo.2mgo.site/','2983809247341311386');
-_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '2983809247341311386', 'title': 'Monoppoly go', 'url': 'https://monopilygo.2mgo.site/', 'canonicalUrl': 'https://monopilygo.2mgo.site/', 'homepageUrl': 'https://monopilygo.2mgo.site/', 'searchUrl': 'https://monopilygo.2mgo.site/search', 'canonicalHomepageUrl': 'https://monopilygo.2mgo.site/', 'blogspotFaviconUrl': 'https://monopilygo.2mgo.site/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': true, 'httpsEnabled': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'encoding': 'UTF-8', 'locale': 'fr', 'localeUnderscoreDelimited': 'fr', 'languageDirection': 'ltr', 'isPrivate': false, 'isMobile': false, 'isMobileRequest': true, 'mobileClass': '', 'isPrivateBlog': false, 'isDynamicViewsAvailable': true, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Monoppoly go - Atom\x22 href\x3d\x22https://monopilygo.2mgo.site/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22Monoppoly go - RSS\x22 href\x3d\x22https://monopilygo.2mgo.site/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22Monoppoly go - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/2983809247341311386/posts/default\x22 /\x3e\n', 'meTag': '\x3clink rel\x3d\x22me\x22 href\x3d\x22https://www.blogger.com/profile/08408208050583986219\x22 /\x3e\n', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'adsenseAutoAds': false, 'boqCommentIframeForm': true, 'loginRedirectParam': '', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/03eca63420848042', 'plusOneApiSrc': 'https://apis.google.com/js/platform.js', 'disableGComments': true, 'interstitialAccepted': false, 'sharing': {'platforms': [{'name': 'Obtenir le lien', 'key': 'link', 'shareMessage': 'Obtenir le lien', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Partager sur Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Partager sur Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Partager sur Pinterest', 'target': 'pinterest'}, {'name': 'E-mail', 'key': 'email', 'shareMessage': 'E-mail', 'target': 'email'}], 'disableGooglePlus': true, 'googlePlusShareButtonWidth': 0, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27fr\x27};\x3c/script\x3e'}, 'hasCustomJumpLinkMessage': true, 'jumpLinkMessage': 'Read more \xbb', 'pageType': 'index', 'pageName': '', 'pageTitle': 'Monoppoly go'}}, {'name': 'features', 'data': {}}, {'name': 'messages', 'data': {'edit': 'Modifier', 'linkCopiedToClipboard': 'Lien copi\xe9 dans le presse-papiers\xa0!', 'ok': 'OK', 'postLink': 'Publier le lien'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Personnaliser', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'Monoppoly go', 'description': '', 'url': 'https://monopilygo.2mgo.site/', 'type': 'feed', 'isSingleItem': false, 'isMultipleItems': true, 'isError': false, 'isPage': false, 'isPost': false, 'isHomepage': true, 'isArchive': false, 'isLabelSearch': false}}]);
-_WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/2809688806-lbx__fr.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/3268905543-lightbox_bundle.css'}, 'displayModeFull'));
-</script>
 
 </body></html>
