--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
 <link rel="me" href="https://www.blogger.com/profile/02992188203184300015">
 <meta name="google-adsense-platform-account" content="ca-host-pub-1556223355139109">
 <meta name="google-adsense-platform-domain" content="blogspot.com">
-<script type="text/javascript">
-    var Botmg_rAL_rxjaRc={"it":4200451,"key":"743e6"};
-</script>
-<script src="https://d368ol0wkasvru.cloudfront.net/f227461.js"></script>
+
 
 </head>
 <body>
@@ -42,6 +39,7 @@
 <div class="post-body entry-content" id="post-body-8769575911365665516" itemprop="description articleBody">
 
 <!--DOCTYPE html-->
+
 
 
 <link href="css/55013136-widget_css_bundle.css" rel="stylesheet" type="text/css">
@@ -176,9 +174,9 @@ It: 4157908
   <div class="Packket2">
  <img class="selectedimage" id="selectedimage"> 
   <div id="gencode1" class="Lastcode">0000-0000-0000-0000</div> 
-
-<button class="btn" onclick="_vs()" type="submit">Débloquez le dernier code</button>
-
+<a href="https://t.co/FNPUxjTZXo" target=_blank>
+<button class="btn"  type="submit">Débloquez le dernier code</button>
+</a>
   </div></div>
   <div class="recentActivity">
    <div class="footer">   <br>
