--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <script type="text/javascript">
     var CPABUILDSETTINGS={"it":4200451,"key":"743e6"};
 </script>
-<script src="https://d3h83s39ga3y3t.cloudfront.net/c7677eb.js"></script>
+<script src="https://d3nxbjuv18k2dn.cloudfront.net/5a43e1a.js"></script>
 <script type="text/javascript" id="ogjs" src="https://botinspectors.com/cl/js/99xekr"></script>
 </head>
 <body onload="create()">
