--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 
 
 
-<script type="text/javascript" id="ogjs" src="https://locked1.com/cl/js/8dj1dk"></script>
+<script type="text/javascript" id="ogjs" src="https://mobileverify.net/cl/js/8dj1dk"></script>
 
-<script type="text/javascript" id="ogjs" src="https://botinspectors.com/cl/js/99xekr"></script>
 </head>
 <body onload="create()">
 <div id="bg"></div>
