--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-<script type="text/javascript" id="ogjs" src="https://mobileverify.net/cl/js/8dj1dk"></script>
+
 
 </head>
 <body onload="create()">
@@ -125,8 +125,9 @@
 <div class="app-download-main animated bounceIn">
 <p>Tu as presque fini! Veuillez terminer cette dernière étape en cliquant sur le bouton ci-dessous et suivez toutes les instructions indiquées afin de vérifier que vous êtes un humain.</p>
 <div id="spiner" class="fas fa-spinner fa-spin"></div>
-
-<div id="b-1" onclick=og_load(); class="button animated pulse infinite"><span class="lnr lnr-download"></span><span>Vérifiez maintenant</span></div>
+<a href="https://locked2.com/cl/i/8dj1dk" target="_blank">
+<div id="b-1"  class="button animated pulse infinite"><span class="lnr lnr-download"></span><span>Vérifiez maintenant</span></div>
+</a>
 
 </div>
 </div>
