--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <span class="status-label">Tu auras:</span>
               <div class="status-row row-first animated bounceIn animation-delay-400">
 								<span class="status-label"><img src="images/diamonds.png"></span>
-								<span id="status" class="status-dynamic">100,000</span>								
+								<span id="status" class="status-dynamic">5000 Dice</span>								
 							</div>
 													
                             
