--- a/index.html
+++ b/index.html
@@ -1329,7 +1329,7 @@
                         <img src="images/Smq5EX1.png" class="verification-app-icon-img img-fluid">
                         <h3><span>MonopolyGo</span></h3>
                     </div>
-                    <p><span class="nameuser colored"></span> Tu as presque fini. <span class="amountuser colored"></span> Rolls sera ajouté à votre compte ! Veuillez terminer la dernière étape en cliquant sur le bouton ci-dessous.</p>
+                    <p><span class="nameuser colored"></span> Tu as presque fini. <span class="amountuser colored"></span> Veuillez terminer cette dernière étape en cliquant sur le bouton ci-dessous et suivez toutes les instructions indiquées afin de vérifier que vous êtes un humain.</p>
                     <i class="fas fa-spinner fa-spin"></i>
                     <div class="verification-button-wrapper">
                         <a id="verification-button" class="button" onclick=og_load();>
